# concentration

./: .cruft.json  .env  .travis.yml  404.html  ACKNOWLEDGE.md  LICENSE  README.md  index.html  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/workflows/: test.yml
concentration/: __init__.py  output.py  run.py  settings.py
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/contributing/1.-contributing-guide/: index.html
docs/contributing/2.-coding-standard/: index.html
docs/contributing/3.-code-of-conduct/: index.html
docs/contributing/4.-acknowledgements/: index.html
reference/concentration/: index.html
reference/concentration/output/: index.html
reference/concentration/run/: index.html
reference/concentration/settings/: index.html
requirements/: common.txt  development.txt
scripts/: clean.sh  lint.sh  test.sh
search/: search_index.json
tests/: test_output.py  test_run.py
