 [tool.poetry]
name = "concentration"
version = "1.1.5"
description = "Get work done when you need to, goof off when you don't."
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
hug = "^2.6.1"

[tool.poetry.dev-dependencies]
vulture = "^1.0"
bandit = "^1.6"
safety = "^1.8"
isort = "^5.3"
flake8-bugbear = "^19.8"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
mypy = "^0.730.0"
ipython = "^7.7"
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pep8-naming = "^0.8.2"
portray = "^1.3.0"
cruft = "^2.2"

[tool.poetry.scripts]
concentration = "concentration.run:__hug__.cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"
